--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Keat Yee - Portfolio</title>
+    <meta name="description" content="Full Stack Developer Portfolio - Modern web applications with React, Node.js and more">
   </head>
   <body>
     <div id="root"></div>
