--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/ramen.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keat Yee - Portfolio</title>
+    <title>Loke Keat Yee</title>
     <meta name="description" content="Full Stack Developer Portfolio - Modern web applications with React, Node.js and more">
   </head>
   <body>
